fix:alignament of the first plan column

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,6 @@ body {
   color: white;
 }
 
-
 input {
   appearance: none;
   border-radius: 50%;
@@ -105,12 +104,10 @@ input {
   color: blue;
   border: 2px solid #999;
   transition: 0.2s ease;
- 
 }
 input:checked {
   border: 5px solid blue;
 }
-
 
 /*----------------
     HEADER
@@ -184,20 +181,20 @@ h1:first-of-type {
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 38px;
   margin-bottom: 40px;
 }
 
 main label {
-  font-size: 16px;
+  font-size: 17px;
 }
 .pagamento {
   margin-left: 50px;
-  margin-bottom: 40px;
 }
 .plan {
   display: flex;
   gap: 20px;
+  margin-top: 55px;
 }
 .container.smol .col {
   border: solid lightgrey 1px;
@@ -230,6 +227,14 @@ h3 {
 .col ul {
   line-height: 2;
 }
+
+.plan .col  li {
+  display: flex;
+  align-items: top;
+  gap: 5px;
+  
+}
+
 .col .btn.secondary {
   padding: 12px 16px;
 }
